@@ -1,3 +1,4 @@
+import Design_Pattern.Memento.Editor;
 import Streams.CreatingStreamsDemo;
 import Streams.Movie;
 import Streams.StreamsDemo;
@@ -21,22 +22,30 @@ public class Main {
     public static void main(String[] args) {
         StreamsDemo.show();
 
+        var editor = new Editor();
+        editor.setContent("a");
+        editor.setContent("b");
+        editor.setContent("c");
+        editor.setContent("d");
+
+
+
 //        CreatingStreamsDemo.show();
 //        Using method reference
 //        Function<Integer, Integer> sqFunction = node::square;
 //        System.out.println(sqFunction.apply(9));
 
-        List<String> cities = (List.of("Dhaka", "Chittagong", "Rajshahi", "Khulna"));
-        List<Integer> nums = Arrays.asList(4,5,3,6,2,1);
-
-        Stream<Integer> numsStream = nums.stream();
-
-        Predicate<Integer> cond = new Predicate<Integer>() {
-            @Override
-            public boolean test(Integer t) {
-                return t % 2 == 1;
-            }
-        };
+//        List<String> cities = (List.of("Dhaka", "Chittagong", "Rajshahi", "Khulna"));
+//        List<Integer> nums = Arrays.asList(4,5,3,6,2,1);
+//
+//        Stream<Integer> numsStream = nums.stream();
+//
+//        Predicate<Integer> cond = new Predicate<Integer>() {
+//            @Override
+//            public boolean test(Integer t) {
+//                return t % 2 == 1;
+//            }
+//        };
 
 
 
